Display Alt Penalty Mode

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,10 @@
                 <td>Message:</td>
                 <td id="message">-</td>
             </tr>
+            <tr>
+                <td>Mode:</td>
+                <td id="mode">-</td>
+            </tr>
         </tbody>
     </table>
 </body>
