Broadcast Also Low Plane Data to Server

--- a/static/index.html
+++ b/static/index.html
@@ -40,9 +40,42 @@
                 <td>Message:</td>
                 <td id="message">-</td>
             </tr>
+        </tbody>
+    </table>
+    <hr>
+    <div>Low Alt:</div>
+    <h1 id="callsign_low">Callsign</h1>
+    <table>
+        <tbody>
             <tr>
-                <td>Mode:</td>
-                <td id="mode">-</td>
+                <td>Alt:</td>
+                <td id="altitude_low">-</td>
+                <td>ft</td>
+            </tr>
+            <tr>
+                <td>Dist:</td>
+                <td id="distance_low">-</td>
+                <td>km</td>
+            </tr>
+            <tr>
+                <td>Type:</td>
+                <td id="type_low">-</td>
+            </tr>
+            <tr>
+                <td>Reg:</td>
+                <td id="registration_low">-</td>
+            </tr>
+            <tr>
+                <td>Bearing:</td>
+                <td id="bearing_low">-</td>
+            </tr>
+            <tr>
+                <td>Timestamp:</td>
+                <td id="timestamp_low">-</td>
+            </tr>
+            <tr>
+                <td>Message:</td>
+                <td id="message_low">-</td>
             </tr>
         </tbody>
     </table>
