Send Units with Data

--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,11 @@
         <tbody>
             <tr>
                 <td>Alt:</td>
-                <td> <div id="altitude">-</div> ft</td>
+                <td id="altitude">-</td>
             </tr>
             <tr>
                 <td>Dist:</td>
-                <td> <div id="distance">-</div> km</td>
+                <td id="distance">-</td>
             </tr>
             <tr>
                 <td>Type:</td>
@@ -47,11 +47,11 @@
         <tbody>
             <tr>
                 <td>Alt:</td>
-                <td> <div id="altitude_low">-</div> ft</td>
+                <td id="altitude_low">-</td>
             </tr>
             <tr>
                 <td>Dist:</td>
-                <td> <div id="distance_low">-</div> km</td>
+                <td id="distance_low">-</td>
             </tr>
             <tr>
                 <td>Type:</td>
